--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <legend>Customer Information</legend>
         <div class="formrow">
           <label for="name">Name*</label>
-          <input name="custName" id="name" type="text" placeholder="first and last name" />
+          <input name="custName" id="name" type="text" placeholder="first and last name" required />
         </div>
         <div class="formrow">
           <label for="street">steet address</label>
@@ -75,15 +75,15 @@
         </div>
         <div class="formrow">
           <label for="zip">Postal Code</label>
-          <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" />
+          <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" pattern="^\d{5}(-\d{4})?$" />
         </div>
         <div class="formrow">
           <label for="phone">Phone Number</label>
-          <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" />
+          <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$" />
         </div>
         <div class="formrow">
           <label for="email"> Email</label>
-          <input name="custEmail" id="email" type="text" />
+          <input name="custEmail" id="email" type="email" required />
         </div>
 
         <div class="formrow">
@@ -184,6 +184,12 @@
         <label for="commbox">Tell us more about your experience!</label>
         <textarea name="custExp" id="commBox" cols="30" rows="10"></textarea>
       </fieldset>
+
+      <div id="buttons">
+        <input type="submit" value="Submit My Survey">
+        <input type="reset" value="Cancel">
+      </div>
+
     </form>
 
   </section>
